--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WB Website</title>
 </head>
 <body>
-    <h1>Welcome to our Commercial Website</h1>
+    <h1>Welcome to WB-app</h1>
 
     <form action="login.php" method="post">
         <label for="username">Username:</label>
@@ -18,7 +18,7 @@
         <button type="submit">Login</button>
     </form>
 
-    <p>Not a member? <a href="register.html">Register here</a></p>
+    <p>Not a member, join us? <a href="register.html">Register here</a></p>
 </body>
 </html>
 
