--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button type="submit">Login</button>
     </form>
 
-    <p>Not a member, join us? <a href="register.html">Register here</a></p>
+    <p>Not a member, join? <a href="register.html">Register here</a></p>
 </body>
 </html>
 
